# microsoft-foundry-jumpstart

./: .cspell.json  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  README.md  package.json
.aspire/: settings.json
.copilot-tracking/changes/2026-04-07/: mai-image-2-blazor-sample-changes.md
.copilot-tracking/details/2026-04-07/: mai-image-2-blazor-sample-details.md
.copilot-tracking/plans/2026-04-07/: mai-image-2-blazor-sample-plan.instructions.md
.copilot-tracking/research/2026-04-07/: mai-image-2-blazor-sample-research.md
.copilot-tracking/research/subagents/2026-04-07/: blazor-auth-config-research.md  mai-image-2-sdk-and-inference-research.md  repo-dotnet-sample-conventions-research.md
.copilot-tracking/reviews/2026-04-07/: mai-image-2-blazor-sample-plan-review-UPDATED.md  mai-image-2-blazor-sample-plan-review.md  mai-image-2-blazor-sample-quality-validation.md
.copilot-tracking/reviews/rpi/2026-04-07/: mai-image-2-blazor-sample-plan-001-validation.md  mai-image-2-blazor-sample-plan-002-validation.md  mai-image-2-blazor-sample-plan-003-validation.md  mai-image-2-blazor-sample-plan-004-validation.md
.github/: copilot-instructions.md
.github/agents/: azure-verified-modules-bicep.agent.md  critical-thinking.agent.md  expert-dotnet-software-engineer.agent.md  janitor.agent.md  mentor.agent.md  principal-software-engineer.agent.md  🎭 generator.agent.md  🎭 healer.agent.md  🎭 planner.agent.md
.github/instructions/: azure-verified-modules-bicep.instructions.md  csharp-14-best-practices.instructions.md
.github/prompts/: update-avm-modules-in-bicep.prompt.md
.github/skills/dotnet-sdk-style-upgrade/: SKILL.md
.github/skills/update-avm-modules/: SKILL.md
.github/skills/update-avm-modules-in-bicep/: SKILL.md
.github/upgrades/: dotnet-upgrade-plan.md  dotnet-upgrade-report.md
.github/workflows/: continuous-delivery.yml  continuous-integration.yml  delete-infrastructure.yml  e2e-test.yml  lint-and-publish-bicep.yml  lint-and-test-dotnet-apps.yml  lint-and-test-python-apps.yml  lint-markdown.yml  provision-infrastructure.yml  validate-infrastructure.yml
architectures/: README.md
architectures/pattern-centralized-ai-gateway/: README.md  main.bicep  main.bicepparam
architectures/pattern-cross-region-webapp/: README.md
architectures/pattern-cross-region-webapp/app/: CrossRegionAgent.csproj  Program.cs
architectures/pattern-cross-region-webapp/app/Pages/: Index.cshtml  Index.cshtml.cs
architectures/pattern-cross-region-webapp/app/Properties/: launchSettings.json
architectures/pattern-cross-region-webapp/infra/: main.bicep  main.bicepparam
architectures/pattern-foreign-model-gateway/: README.md
architectures/pattern-foreign-model-gateway/infra/: main.bicep  main.bicepparam
docs/: AGENT_DESIGN_PATTERNS.md  AGENT_FRAMEWORK_V1_MIGRATION.md  AGENT_IDENTITY.md  ARCHITECTURE.md  CONFIGURATION_OPTIONS.md  DEVOPS.md  FOLDERS.md  OVERVIEW.md  QUICK_CONFIGURATIONS.md  README.md  RESPONSES_API_SERVER_VS_CLIENT_TOOL_CALLING.md  TECHNOLOGY.md
docs/diagrams/: agent-design-patterns.drawio  pattern-1-prompt-agent-architecture.drawio  pattern-2-prompt-agent-hybrid-architecture.drawio  pattern-3-workflow-agent-architecture.drawio  pattern-4-hosted-agent-architecture.drawio  pattern-5-client-side-responses-architecture.drawio  pattern-6-client-side-stateless-architecture.drawio
infra/: main.bicep  main.bicepparam  main.json  sample-foundry-applications.json  sample-model-deployments.json
infra/cognitive-services/accounts/: main.bicep  main.json
infra/cognitive-services/accounts/capabilityHost/: main.json
infra/cognitive-services/accounts/project/: main.bicep  main.json
infra/cognitive-services/accounts/project/application/: main.bicep  main.json
infra/core/security/: role_aisearch.json  role_foundry.json  role_storageaccount.json
infra/sample-model-deployments/: README.md
samples/: README.md
samples/dotnet/: Directory.Build.props  README.md  microsoft-foundry-jumpstart-samples.slnx
samples/dotnet/src/AzureArchitect/AzureArchitect_Step02a_Foundry_Agent_SingleTurn/: Program.cs
samples/dotnet/src/AzureArchitect/AzureArchitect_Step02c_Foundry_Agent_PrebuiltAgent/: azure-security-architect.prompt.md
samples/dotnet/src/AzureArchitect/AzureArchitect_Step04_UsingFunctionToolsWithApprovals/: AzureArchitect_Step04_UsingFunctionToolsWithApprovals.csproj  Program.cs
samples/dotnet/src/AzureArchitect/AzureArchitect_Step05_MCPServer/: AzureArchitect_Step05_MCPServer.csproj  Program.cs
samples/dotnet/src/AzureArchitect/AzureArchitect_Step06_UsingImages/: AzureArchitect_Step06_UsingImages.csproj  (+1 more)
samples/dotnet/src/orchestrator/: README.md
samples/dotnet/tests/: .gitkeep
samples/python/: README.md  pyproject.toml
samples/python/tests/: .gitkeep
scripts/: Upload-SampleData.ps1  Upload-SampleData.sh
src/samples/dotnet/: microsoft-foundry-jumpstart-samples.slnx
src/tools/python/create_ai_search_index/: pyproject.toml
tools/python/: README.md  pyproject.toml
tools/python/src/create_ai_search_index/: README.md  __init__.py  __main__.py  cli.py  engine.py
tools/python/src/create_ai_search_index/docs/: DESIGN.md
tools/python/src/data_generator/: README.md  __init__.py  cli.py  engine.py  pyproject.toml  tool.py
tools/python/src/data_generator/docs/: DESIGN.md
tools/python/src/data_generator/tools/: __init__.py  retail_product.py
tools/python/tests/: __init__.py  conftest.py
tools/python/tests/create_ai_search_index/: __init__.py  conftest.py  test_cli.py  test_engine.py
tools/python/tests/data_generator/: __init__.py  conftest.py  test_cli.py  test_engine.py  test_tool.py
tools/python/tests/data_generator/tools/: __init__.py  conftest.py  test_customer_support_chat_log.py  test_ecommerce_order_history.py  test_financial_transaction.py  test_healthcare_clinical_policy.py  test_healthcare_record.py  test_hr_employee_record.py  test_insurance_claim.py  test_it_service_desk_ticket.py  test_manufacturing_maintenance_log.py  test_retail_product.py  test_tech_support.py  test_tech_support_sop.py  test_travel_booking.py
(+164 files in other folders)
