[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-foundry-jumpstart-tools"
version = "0.1.0"
description = "Python tools for Microsoft Foundry Jumpstart"
requires-python = ">=3.8"
dependencies = [
    "azure-identity>=1.19.0",
    "azure-storage-blob>=12.24.0",
    "azure-ai-projects>=1.0.0b6",
    "azure-search-documents>=11.6.0b10",
    "click>=8.1.8",
    "pydantic>=2.10.5",
    "colorama>=0.4.6",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "semantic-kernel>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.6",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "types-requests>=2.32.0.20241016",
    "types-PyYAML>=6.0.12.20240917",
    "types-colorama>=0.4.15.20240311",
]

[tool.ruff]
# Set line length to match common Python standards
line-length = 88

# Target Python 3.8+ compatibility
target-version = "py38"

# Exclude specific directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

# Ignore specific rules that may not be appropriate for this project
ignore = [
    "E501",   # line too long - handled by formatter
    "B904",   # raise-without-from-inside-except - sometimes acceptable
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["create_ai_search_index", "data_generator"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use 4 spaces for indentation
indent-style = "space"
# Respect existing line endings
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Filter out warnings from dependencies
filterwarnings = [
    "ignore:The `__get_pydantic_core_schema__` method of the `BaseModel` class is deprecated:pydantic.warnings.PydanticDeprecatedSince211",
]
