[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "create-ai-search-index"
version = "0.1.0"
description = "Azure AI Search index pipeline builder for RAG scenarios."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name / Organization", email = "your.email@example.com" }, # Please update this
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv==1.2.1",
    "azure-identity==1.25.1",
    "azure-search-documents==11.6.0",
    "azure-storage-blob==12.28.0",
    "openai==2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "flake8==7.3.0",
    "black==26.1.0",
    "mypy==1.19.1",
    "isort==5.0",
    "ruff==0.14.14",
    # "types-azure-identity", # Optional: if available and useful
    # "types-azure-search-documents", # Optional
]

[project.urls]
Homepage = "https://github.com/PlagueHO/azure-ai-foundry-jumpstart/tree/main/src/create_ai_search_index"
Repository = "https://github.com/PlagueHO/azure-ai-foundry-jumpstart"
BugTracker = "https://github.com/PlagueHO/azure-ai-foundry-jumpstart/issues"

[project.scripts]
# This assumes the package, when installed, is importable as `create_ai_search_index`
create-ai-search-index = "create_ai_search_index.cli:main"

[tool.hatch.build.targets.wheel]
# The 'packages' key indicates the directory name of the package in the wheel.
# The 'sources' key maps this package name to the source directory.
# Here, content of "." (current directory) will become the "create_ai_search_index" package.
packages = ["create_ai_search_index"]
sources = [
  { include = ".", dest = "create_ai_search_index" }
]

[tool.hatch.build.targets.sdist]
# Include all .py files from the current directory, README, and pyproject.toml (auto-included)
include = ["*.py", "README.md"]


[tool.black]
line-length = 88
target-version = ["py310"] # Align with requires-python

[tool.ruff] # Add ruff configuration, align with data_generator
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"] # Common selection, adjust as needed

[tool.isort] # Retained for now, but ruff can also handle this (via ruff.lint.isort)
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
# strict = true # Consider enabling for stricter checks, like in data_generator
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# The package source files are in the current directory "."
# Mypy will scan .py files here.
# If tests are added in a "tests" subdir, add "tests" to this list.
files = ["."]


[tool.pytest.ini_options] # Add pytest configuration, align with data_generator
# Assuming tests will be in a 'tests' directory and source code (package) is 'create_ai_search_index'
# For current structure where source is '.', cov target is the package name.
addopts = "-ra --cov=create_ai_search_index --cov-report=term-missing"
markers = ["live: marks tests that hit live Azure endpoints (deselect with -m 'not live')"]
# python_files = "tests.py test_*.py *_test.py" # Default, can be explicit
# python_classes = "Test*"
# python_functions = "test_*"
